--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
@@ -23,6 +24,11 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.9.5",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "shiki": "^0.14.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
